--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Este es el archivoooo para el Taller 3</h1>
     <h2>PUNTO DE CONTROL 2</h2>
+    <h3>PUNTO DE CONTROL 3</h3>
 </body>
 </html>
